# chore-tracker-

./: .env.example  .gitignore  README.md  docker-compose.yml  package-lock.json  package.json  vercel.json
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_password_reset.py  0003_tenant_twilio_number.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: __init__.py  admin.py  alerts.py  auth.py  billing.py  calls.py  customers.py  documents.py  tasks.py  tenants.py  users.py
backend/app/api/v1/webhooks/: stripe.py  twilio.py
backend/app/core/: config.py  cookies.py  logging.py  rate_limit.py  security.py  tenancy.py
backend/app/db/: base.py  session.py
backend/app/db/models/: __init__.py  audit.py  call.py  customer.py  document.py  password_reset.py  task.py  tenant.py  user.py
backend/app/prompts/: call_reply.j2  call_summary.j2  customer_followup.j2  document_extract.j2
backend/app/schemas/: __init__.py  audit.py  auth.py  billing.py  call.py  common.py  customer.py  document.py  task.py  tenant.py  user.py
backend/app/services/: __init__.py  alerts.py  audit.py  auth.py  billing.py  claude_client.py  documents.py  notifications.py  ocr.py  onboarding.py  storage.py  twilio_verify.py  voice.py
backend/app/workers/: celery_app.py
backend/app/workers/tasks/: alerts.py  calls.py  documents.py  notifications.py
backend/tests/: conftest.py  test_billing.py  test_health.py  test_units.py  test_voice.py
frontend/: Dockerfile  next.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.ts
frontend/.vercel/: project.json
infra/: render.yaml  vercel.json
(+35 files in other folders)
