[project]
name = "chore-tracker-backend"
version = "0.1.0"
description = "Multi-tenant AI SaaS for service businesses — FastAPI backend"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pydantic>=2.9",
  "pydantic-settings>=2.6",
  "sqlalchemy[asyncio]>=2.0.35",
  "asyncpg>=0.29",
  "psycopg[binary]>=3.2",
  "alembic>=1.13",
  "redis>=5.1",
  "celery[redis]>=5.4",
  "httpx>=0.27",
  "anthropic>=0.39",
  "boto3>=1.35",
  "twilio>=9.3",
  "stripe>=11.1",
  "sendgrid>=6.11",
  "python-jose[cryptography]>=3.3",
  "passlib[bcrypt]>=1.7.4",
  "python-multipart>=0.0.12",
  "structlog>=24.4",
  "sentry-sdk[fastapi]>=2.17",
  "jinja2>=3.1",
  "pypdf>=5.0",
  "pillow>=11.0",
  "email-validator>=2.2",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.7",
  "mypy>=1.13",
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "httpx>=0.27",
  "factory-boy>=3.3",
  "testcontainers[postgres]>=4.8",
  "types-python-jose",
  "types-passlib",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["celery", "celery.*"]
ignore_missing_imports = true
follow_imports = "skip"

[[tool.mypy.overrides]]
module = ["app.workers.*"]
disallow_untyped_decorators = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
